--- a/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
+++ b/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
@@ -8,7 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.4.5" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.4.5" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.4.3" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.4.5" />
+    <PackageReference Include="Microsoft.Bot.Protocol.StreamingExtensions.NetCore" Version="1.0.0-67551" />
   </ItemGroup>
 
     <ItemGroup>
