--- a/Olivia-Healthcare-Bot/appsettings.json
+++ b/Olivia-Healthcare-Bot/appsettings.json
@@ -1,4 +1,7 @@
 {
-  "MicrosoftAppId": "90bb19fa-efe6-462a-bbf5-9fc5eadac02b",
-  "MicrosoftAppPassword": "ERXt0YGv*MTxTZOn5/aHX@r5:32B7JG9"
+  "MicrosoftAppId": "ef186634-775d-4a08-9339-95c9f0eb69cc",
+  "MicrosoftAppPassword": "uC70ztnskS2tCkqOw?mi[pqnxic]Ny0?",
+  "LuisAppId": "be301856-0937-4553-b55f-2df4f5d7ccb2",
+  "LuisAPIKey": "2337287231d24c00af85d9fa7560dfa0",
+  "LuisAPIHostName": "westus"
 }
