--- a/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
+++ b/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
@@ -7,9 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.4.5" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.4.5" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.4.5" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.4.5" />
-    <PackageReference Include="Microsoft.Bot.Protocol.StreamingExtensions.NetCore" Version="1.0.0-67551" />
+    
   </ItemGroup>
 
     <ItemGroup>
