--- a/Olivia-Healthcare-Bot/appsettings.json
+++ b/Olivia-Healthcare-Bot/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "MicrosoftAppId": "ef186634-775d-4a08-9339-95c9f0eb69cc",
-  "MicrosoftAppPassword": "uC70ztnskS2tCkqOw?mi[pqnxic]Ny0?",
-  "LuisAppId": "be301856-0937-4553-b55f-2df4f5d7ccb2",
-  "LuisAPIKey": "2337287231d24c00af85d9fa7560dfa0",
+  "MicrosoftAppId": "",
+  "MicrosoftAppPassword": "",
+  "LuisAppId": "013abb80-9396-4895-939f-46bd099ec98b",
+  "LuisAPIKey": "618dd498148f4de49ba0737fcee8893c",
   "LuisAPIHostName": "westus"
 }
