--- a/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
+++ b/Olivia-Healthcare-Bot/Olivia-Healthcare-Bot.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailChimp.Net.V3" Version="4.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.4.5" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.4.5" />
